# gtixt-data

./: .eslintrc.json  .gitignore  PHASE_3_WEEK_3_DELIVERY_REPORT.md  PHASE_3_WEEK_4_COMPLETE.md  PHASE_3_WEEK_4_DELIVERY_REPORT.md  README.md  WEEK_3_FILES_CREATED.txt  bootstrap.sh  deploy-healthcheck.sh  deploy-prefect.sh  deploy-validation.sh  jest.config.js  load_seed_data.py  mini_chat_server.py  package-lock.json  package.json  populate_agent_data.py  populate_data.sh  pyproject.toml  requirements-slack.txt  slack_server.py  start-slack-server.sh  tsconfig.json
database/: schema.sql
docs/: BOT_ARCHITECTURE.md  DEPLOYMENT_VALIDATION.md  FCA_API_REGISTRATION.md  FCA_CREDENTIALS_SETUP.md  FRP_SPEC_v1.md  IIP_SPEC_v1.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  IRS_SPEC_v1.md  MINIO_OBJECT_LOCK_SETUP.md  MIS_SPEC_v1.md  PHASE_3_API_INDEX.md  PHASE_3_FCA_API.md  PHASE_3_OFAC_SANCTIONS.md  PHASE_3_SEC_EDGAR.md  PHASE_3_TRUSTPILOT.md  PHASE_3_WEEK_1_COMPLETE.md  PHASE_3_WEEK_3_COMPLETE.md  PROJECT_STATUS.md  QUICKSTART.md  REM_SPEC_v1.md  ROADMAP_v1.0_to_v1.1.md  ROLE_DEFINITIONS.md  RUNBOOK.md  RVI_SPEC_v1.md  SETUP_VPS.md  SLACK_AGENT_EXAMPLES.md  SLACK_INTEGRATION_SETUP.md  SSS_SPEC_v1.md  SS_SPEC_v1.md  VALIDATION_FRAMEWORK_README.md  netlify-example.js
flows/: adaptive_enrichment_flow.py  daily_monitor.py  healthcheck_ollama_flow.py  monthly_snapshot.py  orchestration.py  pipeline_flow.py  production_flow.py  snapshot_history_automation.py  universe_pipeline.py  validation_flow.py  weekly_refresh.py
infra/: Dockerfile.bot  alerts.yml  docker-compose.monitoring.yml  (+4 more)
(+104 files in other folders)
